# data-pipeline-2025

./: .env.example  .gitignore  DOCKER_USAGE.md  Dockerfile  PR_TEMPLATE.md  README.md  StoresFull7290700100008-000-000-20250821-002217  Supermarket_Crawler.py  __norm_block.txt  __norm_fn.txt  __old_snippet.txt  attrs.json  bad.json  consumer_lambda.py  docker-compose.yaml  docker-compose.yml  entrypoint.sh  normalizer.py  pyproject.toml  redrive.json  requirements.txt  run.sh  sample_msg.json  sample_msg_one.json  send_msg.py  test_libs.py  validator.py
Data-Pipelines-Final-Project/: commands.md  docker-compose.yml
api/: app.py  db.py  main.py  routes_enriched.py  schemas.py
examples/: .gitignore  Docker Cheat Sheet.md  db_handler.py  file_processor.py  main.py  requirements.txt
extractor_lambda/: config.py  db.py  handler.py  items_sample.json  local_run.py  msg.json  normalizer.py  parser.py  producer.py  requirements.txt  sample_event.json  sqs_bodies.json  sqs_body_utf8.json  sqs_msg_utf8.json  test_sqs.py  tmp_recv.py
final_pipeline/: .env.example  .gitignore  README.md  docker-compose.yml  quick_start.sh  temp
ingest_consumer/: config.py  consumer.py  db.py  dlq.py  enrich.py  enricher.py  errors.py  normalizer.py  processor.py  schemas.py  send_msg.py  storage.py  storage_sqlite.py  validator.py
ingest_consumer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
migrations/: 001_create_prices.sql  001_init.sql  01_create_prices_items.sql
salim/: .docker.env  .dockerignore  .env.example  .gitignore  .processed_keys.json  Dockerfile  test.sh  (+37 more)
(+762 files in other folders)
