[project]
name = "ingest-consumer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "boto3",
  "pydantic>=2",
  "prometheus-client",
  "psycopg[binary]"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ingest_consumer*"]
